# sympauli

./: LICENSE  README.md  pyproject.toml  setup.py
sympauli/: __init__.py  example.py  gates.py  heisenberg.py  pauli_string.py  pauli_sum.py
tests/: test_gates.py  test_heisenberg.py  test_pauli_string.py  test_pauli_sum.py
