[project]
name = "sympauli"
version = "1.0.0"
authors = [
  { name="Sumeet Shirgure", email="sumeetshirgure@gmail.com" },
]
description = "Symbolic Pauli Heisenberg Evolution Engine."

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

dependencies=[
  "sympy",
  "numpy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sympauli*"]

[project.urls]
Homepage = "https://github.com/sumeetshirgure/sympauli"
Issues = "https://github.com/sumeetshirgure/sympauli/issues"
